--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Detección de Manos y Rostros</h1>
+        <h1>Hand Speak</h1>
         <div id="content">
             <div id="video-container">
-                <!-- Spinner de carga dentro del contenedor del video -->
                 <div id="loading-spinner" class="loading-screen">
                     <div class="spinner-border" role="status">
                         <span class="visually-hidden">Cargando...</span>
