Implementación de ML, numero y letras

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,15 @@
   
 </head>
 <body>
+
+  <div class="info-box">
+    <label for="modo">Modo:</label>
+   <select id="modo">
+         <option value="letras" selected>Letras</option>
+         <option value="numeros">Números</option>
+   </select>
+  </div>
+
   <div class="top-bar">
     <h1>Hand Speak</h1>
     <button id="theme-toggle" aria-label="Cambiar modo"></button>
@@ -41,6 +50,7 @@
       <div class="info-box">
         <h2>Letra detectada</h2>
         <div id="text-box">(sin datos)</div>
+      
       </div>
 
       <div class="info-box">
